<resources>
    <string name="app_name">Whiteboard</string>
    <string name="title_snippet_detail">Snippet Detail</string>
    <string name="beta">BETA</string>
    <string name="page_title">Photos captured from Whiteboard</string>
    <string name="run">Capture image</string>
    <string name="new_section">New section</string>
    <string name="open_onenote">Open in OneNote</string>
    <string name="refresh">Refresh</string>
    <string name="pick_photos">Pick Photos</string>
    <string name="set_default">Set notebook as default</string>
    <string name="goto_default">New section in default notebook</string>
    <string name="site">Site</string>
    <string name="notebook">Notebook</string>
    <string name="section">Section</string>
    <string name="sharepoint_url">SharePoint URL</string>
    <string name="section_name">Section Name</string>
    <string name="meeting_on">Meeting on</string>
    <string name="photo_saved">Photo(s) saved in notebook.</string>
    <string name="req_url">Request URL</string>
    <string name="req_headers">Request Headers</string>
    <string name="req_body">Request Body</string>
    <string name="response">Response</string>
    <string name="response_headers">Response Headers</string>
    <string name="response_body">Response Body</string>
    <string name="docs"><u>Documentation</u></string>
    <string name="status_code">HTTP Status Code</string>
    <string name="msa_hint">Sign in with the account you use for OneDrive, Xbox Live, Outlook.com, or other Microsoft services</string>
    <string name="o365_hint">Sign in with the account provided by your work or school to use with Office 365 or other Microsoft services</string>
    <string name="org_acct">Organizational Account</string>
    <string name="microsoft_acct">Microsoft Account</string>
    <string name="launch_onenote">Open in OneNote</string>
    <string name="launch_browser">Open in browser</string>
    <string name="quick_links">Quick Links</string>
    <string name="dismiss">Dismiss</string>
    <string name="clippy">copied to clipboard</string>
    <string name="token_err_title">Failed to acquire api token</string>
    <string name="token_err_msg">Office 365 has either failed to refresh the access token or is unavailable. To view the extended stacktrace, click \'Dismiss\' then view the Response Body section</string>
    <string name="disconnect">Disconnect</string>
    <string name="wl_signin">Single sign-in behavior. With single sign-in, users who are already signed in to Live Connect are also signed in to your website.</string>
    <string name="wl_offline_access">The ability of an app to read and update a user\'s info at any time. Without this scope, an app can access the user\'s info only while the user is signed in to Live Connect and is using your app.</string>
    <string name="on_create">Permission to view a list of the user’s OneNote notebooks and create new pages, but not to view or edit existing pages. Gives an app the ability to enumerate the user’s notebook hierarchy and create pages in any location.</string>
    <string name="on_update">Permission to create, view, and modify any content in the user’s OneNote notebooks and pages.</string>
    <string name="on_base">Permission to view OneNote notebooks and pages but not to modify them.</string>
    <string name="unavailable">unavailable</string>
    <string name="err_setup">Error accessing server</string>
    <string name="err_setup_msg">There was an error connecting to the server. Please check your Internet connection.</string>
    <string name="section_without_page_msg">Section without page. Please select a section with a page or create a new section.</string>
    <string name="section_created_msg">Section created.</string>
    <string name="set_default_msg">Selected site and notebook set as default.</string>
    <string name="et_hint">&lt;Your text here&gt;</string>
    <string name="warning_clientid_redirecturi_incorrect">The client ID or redirect URI is not valid. Enter a valid client ID and redirect URI in the ServiceConstants.java file and run again</string>
</resources>
