<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/snippet_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:keepScreenOn="true"
    tools:context=".SnippetDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:enabled="false"
                android:text="@string/set_default"
                android:id="@+id/btn_set_default" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:enabled="false"
                android:text="@string/goto_default"
                android:id="@+id/btn_goto_default" />

        </LinearLayout>

        <TextView
            style="@style/detail_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/site" />

        <Spinner
            android:id="@+id/spinner0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:visibility="gone" />

        <TextView
            style="@style/detail_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/notebook" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:visibility="gone" />

        <TextView
            style="@style/detail_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/section" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/new_section"
                android:id="@+id/btn_new_section" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:id="@+id/btn_refresh" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:enabled="false"
                android:text="@string/run" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:enabled="false"
                android:text="@string/pick_photos"
                android:id="@+id/btn_pick_photos" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:enabled="false"
                android:text="@string/open_onenote"
                android:id="@+id/btn_open_onenote" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:indeterminateOnly="true"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>
