<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/snippet_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SnippetDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/set_default"
                android:id="@+id/btn_set_default" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/goto_default"
                android:id="@+id/btn_goto_default" />

        </LinearLayout>

        <TextView
            style="@style/detail_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/site" />

        <Spinner
            android:id="@+id/spinner0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:visibility="gone" />

        <TextView
            style="@style/detail_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/notebook" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:visibility="gone" />

        <TextView
            style="@style/detail_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/section" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:weightSum="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_section"
                android:id="@+id/btn_new_section" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:id="@+id/btn_refresh" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:weightSum="1">

            <!--
            <TextView
                android:id="@+id/txt_hyperlink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:text="@string/docs"
                android:textColor="#FF0000FF" />
            -->

            <Button
                android:id="@+id/btn_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:enabled="false"
                android:text="@string/run" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:enabled="false"
                android:text="@string/pick_photos"
                android:id="@+id/btn_pick_photos" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:enabled="false"
                android:text="@string/open_onenote"
                android:id="@+id/btn_open_onenote" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:indeterminateOnly="true"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:freezesText="true"
            android:text="Everything below is for debugging purposes only." />

        <!--TextView
            android:id="@+id/txt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:freezesText="true" /-->

        <TextView
            style="@style/detail_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/req_url" />

        <TextView
            android:id="@+id/txt_request_url"
            style="@style/detail_rect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:freezesText="true"
            android:gravity="center"
            android:text="@string/response" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/status_code"
                android:textStyle="bold" />

            <!-- The HTTP status code -->
            <TextView
                android:id="@+id/txt_status_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical" />

            <!-- The HTTP status color -->
            <TextView
                android:id="@+id/txt_status_color"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:gravity="center_vertical" />

        </LinearLayout>

        <TextView
            android:id="@+id/quick_link_header"
            style="@style/detail_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quick_links" />

        <Button
            android:id="@+id/btn_launch_browser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/launch_browser" />

        <TextView
            style="@style/detail_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/response_headers" />

        <TextView
            android:id="@+id/txt_response_headers"
            style="@style/detail_rect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true" />

        <TextView
            style="@style/detail_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:text="@string/response_body" />

        <TextView
            android:id="@+id/txt_response_body"
            style="@style/detail_rect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:freezesText="true"
            android:linksClickable="true" />

    </LinearLayout>
</ScrollView>
